// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly for new_minor_version 1`] = `
<Modal
  contentLabel="system.system_upgrade"
  onRequestClose={[MockFunction]}
>
  <div
    className="modal-head"
  >
    <h2>
      system.system_upgrade
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="6.3"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.4 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-06-02",
            "version": "6.4",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.3 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-05-02",
            "version": "6.3",
          },
        ]
      }
    />
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="5.6.5"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.7 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.7",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.6 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-04-02",
            "version": "5.6.6",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.5 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.5",
          },
        ]
      }
    />
  </div>
  <div
    className="modal-foot"
  >
    <ForwardRef(Link)
      className="pull-left link-no-underline display-flex-center"
      target="_blank"
      to="https://www.sonarqube.org/downloads/?referrer=sonarqube"
    >
      system.see_sonarqube_downloads
    </ForwardRef(Link)>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Modal>
`;

exports[`should display correctly for new_patch 1`] = `
<Modal
  contentLabel="system.system_upgrade"
  onRequestClose={[MockFunction]}
>
  <div
    className="modal-head"
  >
    <h2>
      system.system_upgrade
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <Alert
      className="it__upgrade-alert-new_patch"
      variant="warning"
    >
      admin_notification.update.new_patch
    </Alert>
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="6.3"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.4 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-06-02",
            "version": "6.4",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.3 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-05-02",
            "version": "6.3",
          },
        ]
      }
    />
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={true}
      key="5.6.5"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.7 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.7",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.6 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-04-02",
            "version": "5.6.6",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.5 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.5",
          },
        ]
      }
    />
  </div>
  <div
    className="modal-foot"
  >
    <ForwardRef(Link)
      className="pull-left link-no-underline display-flex-center"
      target="_blank"
      to="https://www.sonarqube.org/downloads/?referrer=sonarqube"
    >
      system.see_sonarqube_downloads
    </ForwardRef(Link)>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Modal>
`;

exports[`should display correctly for pre_lts 1`] = `
<Modal
  contentLabel="system.system_upgrade"
  onRequestClose={[MockFunction]}
>
  <div
    className="modal-head"
  >
    <h2>
      system.system_upgrade
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <Alert
      className="it__upgrade-alert-pre_lts"
      variant="warning"
    >
      admin_notification.update.pre_lts
    </Alert>
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="6.3"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.4 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-06-02",
            "version": "6.4",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.3 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-05-02",
            "version": "6.3",
          },
        ]
      }
    />
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="5.6.5"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.7 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.7",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.6 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-04-02",
            "version": "5.6.6",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.5 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.5",
          },
        ]
      }
    />
  </div>
  <div
    className="modal-foot"
  >
    <ForwardRef(Link)
      className="pull-left link-no-underline display-flex-center"
      target="_blank"
      to="https://www.sonarqube.org/downloads/?referrer=sonarqube"
    >
      system.see_sonarqube_downloads
    </ForwardRef(Link)>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Modal>
`;

exports[`should display correctly for previous_lts 1`] = `
<Modal
  contentLabel="system.system_upgrade"
  onRequestClose={[MockFunction]}
>
  <div
    className="modal-head"
  >
    <h2>
      system.system_upgrade
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <Alert
      className="it__upgrade-alert-previous_lts"
      variant="error"
    >
      admin_notification.update.previous_lts
    </Alert>
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="6.3"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.4 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-06-02",
            "version": "6.4",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.3 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-05-02",
            "version": "6.3",
          },
        ]
      }
    />
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="5.6.5"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.7 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.7",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.6 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-04-02",
            "version": "5.6.6",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.5 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.5",
          },
        ]
      }
    />
  </div>
  <div
    className="modal-foot"
  >
    <ForwardRef(Link)
      className="pull-left link-no-underline display-flex-center"
      target="_blank"
      to="https://www.sonarqube.org/downloads/?referrer=sonarqube"
    >
      system.see_sonarqube_downloads
    </ForwardRef(Link)>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Modal>
`;

exports[`should display correctly for undefined 1`] = `
<Modal
  contentLabel="system.system_upgrade"
  onRequestClose={[MockFunction]}
>
  <div
    className="modal-head"
  >
    <h2>
      system.system_upgrade
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="6.3"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.4 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-06-02",
            "version": "6.4",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 6.3 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-05-02",
            "version": "6.3",
          },
        ]
      }
    />
    <SystemUpgradeItem
      edition="community"
      isLTSVersion={false}
      isPatch={false}
      key="5.6.5"
      systemUpgrades={
        [
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.7 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.7",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.6 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-04-02",
            "version": "5.6.6",
          },
          {
            "changeLogUrl": "changelogurl",
            "description": "Version 5.6.5 description",
            "downloadUrl": "downloadurl",
            "plugins": {},
            "releaseDate": "2017-03-01",
            "version": "5.6.5",
          },
        ]
      }
    />
  </div>
  <div
    className="modal-foot"
  >
    <ForwardRef(Link)
      className="pull-left link-no-underline display-flex-center"
      target="_blank"
      to="https://www.sonarqube.org/downloads/?referrer=sonarqube"
    >
      system.see_sonarqube_downloads
    </ForwardRef(Link)>
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Modal>
`;
